src/objects/AccountOverview__c.object
<CustomObject>
    <description>SFDC1-9063 Salesperson or a user in salesforce would be able to generate an Account Overview for a specific Account (and subsidiaries).</description>
    <fields>
        <fullName>Account1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-9063, Created for account overview report. This is a lookup field for account overview</description>
        <inlineHelpText>Lookup field for account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Overviews</relationshipLabel>
        <relationshipName>AccountOverviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttachmentsCount__c</fullName>
        <description>SFDC1-9063, Created for account overview report.</description>
        <inlineHelpText>Shows number of attachments</inlineHelpText>
        <label>Attachments Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AttendeeCount__c</fullName>
        <description>SFDC1-9063, Created for account overview report. Shows Count of attendees.</description>
        <inlineHelpText>Shows Count of attendees.</inlineHelpText>
        <label>Attendee Count</label>
        <summaryForeignKey>Attendee__c.AccountOverview__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Exclude1Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report. Shows By default all New business open pipeline is included.</description>
        <inlineHelpText>Shows By default all New business open pipeline is included.</inlineHelpText>
        <label>Exclude 1% Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludeSubsidiaries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report. Shows Excluded contracts and opportunities for all subsidiaries.</description>
        <inlineHelpText>For showing excluded contracts and opportunities for all subsidiaries</inlineHelpText>
        <label>Exclude subsidiaries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludeZeroValueOpportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report. By default  zero value opportunities are excluded from overview.</description>
        <inlineHelpText>By default  zero value opportunities are excluded from overview.</inlineHelpText>
        <label>Exclude Zero Value Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeAccountTeam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report.</description>
        <inlineHelpText>Checkbox field to include account team</inlineHelpText>
        <label>Include Account Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeContractsatRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report.</description>
        <inlineHelpText>Checkbox for report generator to show whether contracts are at risk or not</inlineHelpText>
        <label>Include Contracts at Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeExcludeRRRSubsidiaries__c</fullName>
        <description>SFDC1-9063, Created for account overview report.</description>
        <formula>IF(ExcludeSubsidiaries__c, &apos;Exclude Subsidiaries&apos;, &apos;Include Subsidiaries&apos;) +  &apos; &apos; + IF(IncludeRRRColumn__c, &apos;Include RRR&apos;, &apos;Exclude RRR&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Field to include or exclude Run Rate Revenue for subsidiaries</inlineHelpText>
        <label>IncludeExcludeRRRSubsidiaries</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeKeyContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report. Checkbox to show whether to include key contacts</description>
        <inlineHelpText>Checkbox to show whether to include key contacts</inlineHelpText>
        <label>Include Key Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeOpportunitiesOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report. Checkbox to include opportunity owner</description>
        <inlineHelpText>Checkbox to include opportunity owner</inlineHelpText>
        <label>Include Opportunities Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeRRRColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report.</description>
        <inlineHelpText>Checkbox to include Run Rate Revenue Column</inlineHelpText>
        <label>Include RRR Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncludeUpcomingTopRenewals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9063, Created for account overview report.</description>
        <inlineHelpText>Checkbox to include Top Renewals</inlineHelpText>
        <label>Include Upcoming Top Renewals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OppQueryAmount__c</fullName>
        <description>SFDC1-9063, Created for account overview report. (Not visible to end users, for internal purpose only)</description>
        <formula>IF(ExcludeZeroValueOpportunities__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Query for opportunity amount</inlineHelpText>
        <label>Opp Query Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OppQueryProbabilty__c</fullName>
        <description>SFDC1-9063, Created for account overview report. (Not visible to end users, for internal purpose only)</description>
        <formula>IF(Exclude1Opportunities__c, 5, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Query for calculating probability of an opportunity</inlineHelpText>
        <label>Opp Query Probabilty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductLineSummariesCount__c</fullName>
        <description>SFDC1-9063, Created for account overview report.</description>
        <inlineHelpText>Count of Product Line Item</inlineHelpText>
        <label>Product Line Summaries Count</label>
        <summaryForeignKey>ProductLineSummary__c.AccountOverview__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Account Overview</label>
    <nameField>
        <label>Account Overview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Overviews</pluralLabel>
    <recordTypes>
        <fullName>ReadOnly</fullName>
        <active>true</active>
        <description>Ready Only Record Type</description>
        <label>Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ReadWrite</fullName>
        <active>true</active>
        <description>Ready Write Record Type</description>
        <label>Read Write</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>